# vkShade

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  Justfile  README.md  flake.nix  general_todo.txt  meson.build  meson_options.txt  vkbasalt-run.sh  vkshade-run.sh
.github/: update.json
.github/workflows/: ci.yml  maintenance.yml  update.yml
config/: meson.build  vkBasalt.conf  vkShade.json.in
docs/: config-system.md
scripts/: update.sh  vkshade-run.in
src/: basalt.cpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  config.cpp  config.hpp  config_serializer.cpp  config_serializer.hpp  descriptor_set.cpp  descriptor_set.hpp  fake_swapchain.cpp  fake_swapchain.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  input_blocker.cpp  input_blocker.hpp  keyboard_input.cpp  keyboard_input.hpp  keyboard_input_wayland.cpp  keyboard_input_wayland.hpp  keyboard_input_x11.cpp  keyboard_input_x11.hpp  logger.cpp  logger.hpp  logical_device.hpp  logical_swapchain.cpp  logical_swapchain.hpp  lut_cube.cpp  lut_cube.hpp  memory.cpp  memory.hpp  (+35 more)
src/effects/: effect.cpp  effect.hpp  effect_config.hpp  effect_registry.cpp  effect_registry.hpp  effect_reshade.cpp  effect_reshade.hpp  effect_simple.cpp  effect_simple.hpp  effect_transfer.cpp  effect_transfer.hpp
src/effects/builtin/: builtin_effects.cpp  builtin_effects.hpp  effect_cas.cpp  effect_cas.hpp  effect_deband.cpp  effect_deband.hpp  effect_dls.cpp  effect_dls.hpp  effect_fxaa.cpp  effect_fxaa.hpp  effect_lut.cpp  effect_lut.hpp  effect_smaa.cpp  effect_smaa.hpp
src/effects/params/: effect_param.hpp
src/imgui/: imconfig.h
src/overlay/: imgui_overlay.cpp  imgui_overlay.hpp  view_add_effects.cpp  view_configs.cpp  view_debug.cpp  view_diagnostics.cpp  view_main.cpp  view_settings.cpp  view_shader_manager.cpp  view_shader_test.cpp
src/overlay/params/: field_editor.cpp  field_editor.hpp
src/overlay/params/fields/: field_bool.cpp  field_float.cpp  field_floatvec.cpp  field_int.cpp  field_intvec.cpp  field_uint.cpp  field_uintvec.cpp
src/reshade/: effect_codegen.hpp  effect_codegen_spirv.cpp  effect_expression.cpp  effect_expression.hpp  effect_lexer.cpp  effect_module.hpp  effect_parser.cpp  effect_preprocessor.cpp  effect_preprocessor.hpp  effect_symbol_table.cpp  effect_symbol_table.hpp  effect_symbol_table_intrinsics.inl  effect_token.hpp  meson.build  reshade_depth_macros.hpp
src/shader/: depth_resolve.frag.glsl  meson.build
tools/: test_shaders.cpp
